testsuite/tests/linear/should_fail/Linear17.stderr

Linear17.hs:17:3: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘x’ with actual multiplicity ‘'Omega’
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- ((), ())
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo1’:
          incorrectDo1
            = do x <- ()
                 (y, z) <- ((), ())
                 () <- y
                 ....

Linear17.hs:25:6: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘z’ with actual multiplicity ‘'Omega’
    • In the pattern: (y, z)
      In a stmt of a 'do' block: (y, z) <- ((), x)
      In the expression:
        do x <- ()
           (y, z) <- ((), x)
           () <- y
           ()

Linear17.hs:30:3: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘x’ with actual multiplicity ‘'Omega’
    • In a stmt of a 'do' block: x <- ()
      In the expression:
        do x <- ()
           (y, z) <- (x, x)
           () <- y
           () <- z
           ....
      In an equation for ‘incorrectDo3’:
          incorrectDo3
            = do x <- ()
                 (y, z) <- (x, x)
                 () <- y
                 ....
